// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";


package pusGroundModel.protobuf;

message Pus011SyncPoint {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  optional ccsds_mal.protobuf.BOOLEAN modelIsEmpty = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
}
